Work in progress

--- a/source/index.haml
+++ b/source/index.haml
@@ -1,17 +1,6 @@
-%html{:lang => "en"}
-  %head
-    %meta{:charset => "utf-8"}
-    %link{:href => "//fonts.googleapis.com" :rel=>"dns-prefetch"}
-    %link{:href => "//fonts.googleapis.com/css?family=PT+Sans:400,700" :rel=>"stylesheet" :type=>"text/css"}
-    %link{:href => "assets/stylesheets/css/style.css" :rel=>"stylesheet" :type=>"text/css"}
-    %link{:href => "assets/images/favicon.png" :rel=>"stylesheet" :type=>"text/css"}
-  %body
-    %div.container
-      %header
-        %h1 Project
-      %main
-        %p
-          This is a test
-      %footer
-        %p
-          This is a test
+---
+title: Index
+---
+
+%p yolo
+
